<resources>
    <string name="app_name">GamesInfo</string>
    <string name="getstarted">Get started</string>
    <string name="welcome_message">Easily get information about games for your favorite genres.</string>
    <string name="welcome_to_gamesinfo">Welcome to GamesInfo</string>
    <string name="let_s_select_some_genres">Let\'s select some genres</string>
    <string name="genre_select_message">Choose your favorite and as many as you\'d like. You can edit this later at any time.</string>
    <string name="finish">Finish</string>
    <string name="select_at_least_one_genre">We have to select at least one genre. It\'s the law :P</string>
    <string name="my_games">My games</string>
    <string name="settings">Settings</string>
    <string name="favouriteGenres">Favorite genres</string>
    <string name="system">System</string>
    <string name="genre">Genre</string>
    <string name="platforms">Platforms</string>
    <string name="developers">Developers</string>
    <string name="release_date">Release date</string>
    <string name="publishers">Publishers</string>
    <string name="metacritic">Metacritic</string>
    <string name="tags">Tags</string>
    <string name="age_rating">Age rating</string>
    <string name="description">Description</string>
    <string name="close">Close</string>
    <string name="systemRequirements">System requirements</string>
    <string name="stores">Stores</string>
    <string name="check_ratings">Check ratings</string>
    <string name="ratings">Ratings</string>
    <string name="no_internet">No internet</string>
    <string name="no_internet_message">Internet is required to use the app. Please enable internet and try again.</string>
    <string name="try_again">Try again</string>
    <string name="error">Error</string>
    <string name="error_downloading_data_message">"There has been an error with downloading data. Please make sure your internet is stable and try again. "</string>
    <string name="loading_please_wait">Loading, please wait...</string>
    <string name="n_a">N/A</string>
    <string name="read_description">Read description</string>
</resources>