<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.GameDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/screen_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/screen_padding">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageButton
                    android:id="@+id/btn_goBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/transparent"
                    android:contentDescription="@string/settings"
                    android:src="@drawable/baseline_arrow_back_24"
                    app:tint="?colorSecondary" />

            </FrameLayout>

            <TextView
                android:id="@+id/tv_gameName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:textSize="@dimen/h1"
                android:textStyle="bold"
                tools:text="Grand Theft Auto VI" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/screen_padding"
            android:gravity="center">

            <Button
                android:id="@+id/btn_readDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/screen_padding"
                android:layout_marginEnd="@dimen/h4"
                android:text="@string/read_description" />

            <Button
                android:id="@+id/btn_checkRatings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/h4"
                android:backgroundTint="?colorSecondary"
                android:text="@string/check_ratings" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingEnd="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:textAllCaps="true"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/h4" />

                <TextView
                    android:id="@+id/tv_genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/screen_padding"
                    tools:text="Action, RPG, First person shooter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/platforms"
                    android:textAllCaps="true"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/h4" />

                <TextView
                    android:id="@+id/tv_platforms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/screen_padding"
                    tools:text="Playstation 5, PC, XBOX 360, Nintendo Switch" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developers"
                    android:textAllCaps="true"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/h4" />

                <TextView
                    android:id="@+id/tv_developers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/screen_padding"
                    tools:text="Profico, Ja" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/publishers"
                    android:textAllCaps="true"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/h4" />

                <TextView
                    android:id="@+id/tv_publishers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/screen_padding"
                    tools:text="Rockstar Games" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date"
                    android:textAllCaps="true"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/h4" />

                <TextView
                    android:id="@+id/tv_releaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/screen_padding"
                    tools:text="07 Apr 2018" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/metacritic"
                    android:textAllCaps="true"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/h4" />

                <TextView
                    android:id="@+id/tv_metacritic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/screen_padding"
                    tools:text="92" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_rating"
                    android:textAllCaps="true"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/h4" />

                <TextView
                    android:id="@+id/tv_ageRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/screen_padding"
                    tools:text="17+ Mature" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stores"
                    android:textAllCaps="true"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/h4" />

                <TextView
                    android:id="@+id/tv_stores"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/screen_padding"
                    tools:text="Steam, Epic games, Playstation Store, " />
            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tags"
            android:textAllCaps="true"
            android:textColor="@color/gray"
            android:textSize="@dimen/h4" />

        <TextView
            android:id="@+id/tv_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/screen_padding"
            tools:text="Singleplayer, Steam Achievements, Multiplayer, Full controller support, Atmospheric, Great Soundtrack, RPG, Co-op, Open World, cooperative, First-Person, Third Person, Funny, Sandbox, Comedy, Third-Person Shooter, Moddable, Crime, vr mod, От первого лица, Шедевр, От третьего лица, Third Person, Смешная, Funny, Sandbox, Юмор, Песочница, Comedy, Шутер от третьего лица, Third-Person Shooter, Moddable, Поддержка модификаций, Для взрослых, Гонки, Crime, Криминал, vr mod" />

    </LinearLayout>


</ScrollView>