<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding"
    tools:context=".view.GamesListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:textSize="@dimen/h1"
            android:textStyle="bold"
            android:text="@string/my_games" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <ImageButton
                android:id="@+id/btn_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="@color/transparent"
                android:contentDescription="@string/settings"
                app:tint="?colorSecondary"
                android:src="@drawable/baseline_settings_24" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_loading"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="@dimen/h3"
            android:layout_height="@dimen/h3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="@dimen/h3"
            android:text="@string/loading_please_wait" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_games"
        tools:listitem="@layout/item_game"
        android:paddingTop="@dimen/screen_padding"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>